Update GitHub Actions workflow to use key instead of key_path

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           host: 157.245.218.43
           username: root
-          key_path: ${{ secrets.DROPLET_SSH_KEY }}
+          key: ${{ secrets.DROPLET_SSH_KEY }}
           script: |
             cd /var/www/mcp-app
             chmod +x scripts/deploy.sh
