--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,7 +1,27 @@
 server {
     listen 80;
-    server_name 157.245.218.43;
+    server_name mcp.worxstream.io;
 
+    # WebSocket support for Socket.IO
+    location /socket.io/ {
+        proxy_pass http://localhost:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # CORS headers
+        add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
+        add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS" always;
+        add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
+        add_header "Access-Control-Allow-Credentials" "true" always;
+    }
+
+    # Main app proxy
     location / {
         proxy_pass http://localhost:8080;
         proxy_http_version 1.1;
