--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,6 +1,17 @@
+# Redirect all HTTP to HTTPS
 server {
     listen 80;
     server_name mcp.worxstream.io;
+    return 301 https://$host$request_uri;
+}
+
+# Main HTTPS server
+server {
+    listen 443 ssl http2;
+    server_name mcp.worxstream.io;
+
+    ssl_certificate     /etc/letsencrypt/live/mcp.worxstream.io/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/mcp.worxstream.io/privkey.pem;
 
     # WebSocket support for Socket.IO
     location /socket.io/ {
@@ -21,7 +32,7 @@ server {
         add_header "Access-Control-Allow-Credentials" "true" always;
     }
 
-    # Main app proxy
+    # Main API or Web App
     location / {
         proxy_pass http://localhost:8080;
         proxy_http_version 1.1;
