--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ioredis": "^5.6.1",
+    "mongoose": "^8.16.5",
     "redis": "^5.1.1",
     "socket.io": "^4.7.4"
   },
