--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,3 +1,9 @@
+# Upstream configuration for load balancing
+upstream mcp_backend {
+    server 127.0.0.1:8080 max_fails=3 fail_timeout=30s;
+    keepalive 32;
+}
+
 # Redirect all HTTP to HTTPS
 server {
     listen 80;
@@ -13,9 +19,89 @@ server {
     ssl_certificate     /etc/letsencrypt/live/mcp.worxstream.io/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/mcp.worxstream.io/privkey.pem;
 
+    # SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+
+    # Timeouts
+    proxy_connect_timeout 60s;
+    proxy_send_timeout 60s;
+    proxy_read_timeout 60s;
+
+    # Buffer settings
+    proxy_buffering on;
+    proxy_buffer_size 4k;
+    proxy_buffers 8 4k;
+
+    # Health check endpoint
+    location /health {
+        proxy_pass http://mcp_backend/api/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Health check specific headers
+        add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
+        add_header "Access-Control-Allow-Methods" "GET, OPTIONS" always;
+        add_header "Access-Control-Allow-Headers" "Content-Type" always;
+    }
+
     # WebSocket support for Socket.IO
     location /socket.io/ {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://mcp_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # WebSocket specific timeouts
+        proxy_read_timeout 86400;
+        proxy_send_timeout 86400;
+
+        # CORS headers
+        add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
+        add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS" always;
+        add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
+        add_header "Access-Control-Allow-Credentials" "true" always;
+    }
+
+    # API endpoints
+    location /api/ {
+        proxy_pass http://mcp_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # CORS headers
+        add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
+        add_header "Access-Control-Allow-Methods" "GET, POST, DELETE, OPTIONS" always;
+        add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
+        add_header "Access-Control-Allow-Credentials" "true" always;
+
+        # Handle preflight requests
+        if ($request_method = 'OPTIONS') {
+            add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
+            add_header "Access-Control-Allow-Methods" "GET, POST, DELETE, OPTIONS" always;
+            add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
+            add_header "Access-Control-Allow-Credentials" "true" always;
+            add_header "Content-Type" "text/plain; charset=utf-8";
+            add_header "Content-Length" 0;
+            return 204;
+        }
+    }
+
+    # Main API or Web App
+    location / {
+        proxy_pass http://mcp_backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -32,22 +118,9 @@ server {
         add_header "Access-Control-Allow-Credentials" "true" always;
     }
 
-    # Main API or Web App
-    location / {
-        proxy_pass http://localhost:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        # CORS headers
-        add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
-        add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS" always;
-        add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
-        add_header "Access-Control-Allow-Credentials" "true" always;
+    # Error pages
+    error_page 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
