--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -35,7 +35,7 @@ server {
     proxy_buffers 8 4k;
 
     # Health check endpoint
-    location /health {
+    location = /health {
         proxy_pass http://mcp_backend/api/health;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -47,6 +47,16 @@ server {
         add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
         add_header "Access-Control-Allow-Methods" "GET, OPTIONS" always;
         add_header "Access-Control-Allow-Headers" "Content-Type" always;
+        
+        # Handle preflight requests
+        if ($request_method = 'OPTIONS') {
+            add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
+            add_header "Access-Control-Allow-Methods" "GET, OPTIONS" always;
+            add_header "Access-Control-Allow-Headers" "Content-Type" always;
+            add_header "Content-Type" "text/plain; charset=utf-8";
+            add_header "Content-Length" 0;
+            return 204;
+        }
     }
 
     # WebSocket support for Socket.IO
