--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -43,20 +43,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Health check specific headers
-        add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
-        add_header "Access-Control-Allow-Methods" "GET, OPTIONS" always;
-        add_header "Access-Control-Allow-Headers" "Content-Type" always;
-        
-        # Handle preflight requests
-        if ($request_method = 'OPTIONS') {
-            add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
-            add_header "Access-Control-Allow-Methods" "GET, OPTIONS" always;
-            add_header "Access-Control-Allow-Headers" "Content-Type" always;
-            add_header "Content-Type" "text/plain; charset=utf-8";
-            add_header "Content-Length" 0;
-            return 204;
-        }
+        # Remove CORS headers from nginx - let the backend handle them
+        # This prevents duplicate CORS headers
     }
 
     # WebSocket support for Socket.IO
@@ -75,11 +63,8 @@ server {
         proxy_read_timeout 86400;
         proxy_send_timeout 86400;
 
-        # CORS headers
-        add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
-        add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS" always;
-        add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
-        add_header "Access-Control-Allow-Credentials" "true" always;
+        # Remove CORS headers from nginx - let the backend handle them
+        # This prevents duplicate CORS headers
     }
 
     # API endpoints
@@ -91,22 +76,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # CORS headers
-        add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
-        add_header "Access-Control-Allow-Methods" "GET, POST, DELETE, OPTIONS" always;
-        add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
-        add_header "Access-Control-Allow-Credentials" "true" always;
-
-        # Handle preflight requests
-        if ($request_method = 'OPTIONS') {
-            add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
-            add_header "Access-Control-Allow-Methods" "GET, POST, DELETE, OPTIONS" always;
-            add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
-            add_header "Access-Control-Allow-Credentials" "true" always;
-            add_header "Content-Type" "text/plain; charset=utf-8";
-            add_header "Content-Length" 0;
-            return 204;
-        }
+        # Remove CORS headers from nginx - let the backend handle them
+        # This prevents duplicate CORS headers
     }
 
     # Main API or Web App
@@ -121,11 +92,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # CORS headers
-        add_header "Access-Control-Allow-Origin" "https://app.worxstream.io" always;
-        add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS" always;
-        add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
-        add_header "Access-Control-Allow-Credentials" "true" always;
+        # Remove CORS headers from nginx - let the backend handle them
+        # This prevents duplicate CORS headers
     }
 
     # Error pages
